# ExchangeServer

./: README.md
BaseLib/: CMakeCache.txt  CMakeLists.txt  Makefile  UBBlockQueue.h  UBBuffer.cpp  UBBuffer.h  UBCreateOrderID.cpp  UBCreateOrderID.h  UBCrypto.cpp  UBCrypto.h  UBDate.cpp  UBDate.h  UBDefine.h  UBHeader.h  UBHttpParser.cpp  UBHttpParser.h  UBJson.cpp  UBJson.h  UBLock.h  UBMysql.cpp  UBMysql.h  UBString.cpp  UBString.h  UBTime.cpp  UBTime.h  UBWsParser.cpp  UBWsParser.h  UBaseLib.h  cmake_install.cmake  remake
Document/: BVMall数据库拆分方案.odt  BackTrade数据库表关系对照表.html  BackTrade数据库表关系对照表.md  BackTrade项目说明.html  BackTrade项目说明.md  Open API （交易）.html  UKEX撮合程序API文档.html  UKEX撮合程序API文档.md  Ukex数据中心-数据库.odt  UserCenter数据库表关系对照表.html  UserCenter数据库表关系对照表.md  用户中心API说明文档.html  用户中心API说明文档.md
Jmeter/: HTTP API_Balance_Add.jmx  HTTP API_Balance_Allocation.jmx  HTTP API_Balance_FrozenTrans.jmx  HTTP API_Balance_Reduce.jmx  HTTP API_Device_AddBindDevice.jmx  HTTP API_Device_CheckBind.jmx  HTTP API_Device_RemoveBind.jmx  HTTP API_Device_SetMaster.jmx  HTTP API_Password_Pay.jmx  HTTP API_Password_Update.jmx  HTTP API_User_Auth.jmx  HTTP API_User_Info.jmx  HTTP API_User_RealInfo.jmx  HTTP Api_UserCenter_Login.jmx  HTTP Api_UserCenter_Regist.jmx  HTTP Uptrade_test.jmx  ReadMe.txt
OpenSourceLib/: build  build_http_parser  build_jsoncpp  build_libuv  build_openssl  build_protobuf  build_spdlog
Protocol/: CMakeCache.txt  CMakeLists.txt  Makefile  UPCache.cpp  UPCache.h  UPCancelsubscribe.cpp  UPCancelsubscribe.h  UPDefine.h  UPDir.cpp  UPDir.h  UPFileRecord.h  UPGetOrderInfo.cpp  UPGetOrderInfo.h  UPHeartbeat.h  UPOpt.cpp  UPOpt.h  UPRequest.cpp  UPRequest.h  UPSubscribe.cpp  UPSubscribe.h  UPallmarketinfo.cpp  UPallmarketinfo.h  UPassetsupdate.cpp  UPassetsupdate.h  UPcanceltrade.cpp  UPcanceltrade.h  UPcanceltradebatch.cpp  UPcanceltradebatch.h  UPdepthdata.cpp  UPdepthdata.h  UPfiledata.h  UPfilerequest.h  UPhistoricaltransactiondata.cpp  UPhistoricaltransactiondata.h  UPklinedata.cpp  UPklinedata.h  UPklinehistoricaldata.cpp  UPklinehistoricaldata.h  UPlogin.cpp  UPlogin.h  (+16 more)
Protocol/proto/: ukex.allmarketinfo.pb.cc  ukex.allmarketinfo.pb.h  ukex.allmarketinfo.proto  ukex.assetsupdate.pb.cc  ukex.assetsupdate.pb.h  ukex.assetsupdate.proto  ukex.canceltrade.pb.cc  ukex.canceltrade.pb.h  ukex.canceltrade.proto  ukex.canceltradebatch.pb.cc  ukex.canceltradebatch.pb.h  ukex.canceltradebatch.proto  ukex.depthdata.pb.cc  ukex.depthdata.pb.h  ukex.depthdata.proto  ukex.filedata.pb.cc  ukex.filedata.pb.h  ukex.filedata.proto  ukex.filerequest.pb.cc  ukex.filerequest.pb.h  ukex.filerequest.proto  ukex.getorderinfo.pb.cc  ukex.getorderinfo.pb.h  ukex.getorderinfo.proto  ukex.historicaltransactiondata.pb.cc  ukex.historicaltransactiondata.pb.h  ukex.historicaltransactiondata.proto  ukex.klinedata.pb.cc  ukex.klinedata.pb.h  ukex.klinedata.proto  ukex.klinehistoricaldata.pb.cc  ukex.klinehistoricaldata.pb.h  ukex.klinehistoricaldata.proto  ukex.login.pb.cc  ukex.login.pb.h  ukex.login.proto  ukex.matcheddata.pb.cc  ukex.matcheddata.pb.h  ukex.matcheddata.proto  ukex.order.pb.cc  (+11 more)
Test/: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  Makefile  MySqlTest.cpp  UserCenterPost.py  cmake_install.cmake  gong.cpp  grant  grant.cpp  http  http.cpp  http_post.py  http_test.html  json-en.html  mysqltest  post.data  rsa_private_key_blowfish.pem  rsa_public_key_blowfish.pem  uv.cpp  ws.cpp  wuyoupeng  wuyoupeng.cpp
Trade/BackTrade/: CMakeCache.txt  CMakeLists.txt  Makefile  global.h  (+14 more)
Trade/FrontMarket/: BackTradeSession.cpp  BackTradeSession.h  BackTradeSrv.cpp  BackTradeSrv.h  CMakeLists.txt  ClientSession.cpp  ClientSession.h  ClientSrv.cpp  ClientSrv.h  Subscribe.cpp  Subscribe.h  ThreadBackTrade.cpp  ThreadBackTrade.h  ThreadClient.cpp  ThreadClient.h  cmake_install.cmake  config.cpp  config.h  config.json  fronttrade_public_key_blowfish.pem  global.cpp  global.h  main.cpp
TransferPrograme/: SADBconfig.ini  TransferPrograme.py  UkexDBconfig.ini  accountDBconfig.ini  assetsDBconfig.ini  config.ini  config.py  database.py  mysqldataTransfer  test.py  tool.py  tradeDBconfig.ini
UserCenter/UserCenterServer/: CMakeCache.txt  CMakeLists.txt  Makefile  ThreadDBOper.cpp  ThreadDBOper.h  ThreadHttpOper.cpp  ThreadHttpOper.h  ThreadTCPOper.cpp  ThreadTCPOper.h  cmake_install.cmake  global.cpp  global.h  main.cpp  nohup.out  run
UserCenter/UserCenterServer/BaseConfig/: HttpResp.h  RuntimeConfig.cpp  RuntimeConfig.h  RuntimeConfig.json  config.cpp  config.h  config.json  rsa_private_key.pem  rsa_private_key_blowfish.pem
UserCenter/UserCenterServer/BaseConfig/1111/: fronttrade_public_key.pem  rsa_private_key.pem  rsa_public_key.pem  rsa_public_key_blowfish.pem
UserCenter/UserCenterServer/Business/: BaseRequestOper.h  RequestAssetsUpdate.cpp  RequestAssetsUpdate.h  RequestOperCancelTrade.cpp  RequestOperCancelTrade.h  RequestOperCancelTradeBatch.cpp  RequestOperCancelTradeBatch.h  RequestOperMatchData.cpp  RequestOperMatchData.h  RequestOperTrade.cpp  RequestOperTrade.h  RequestOperTradeBatch.cpp  RequestOperTradeBatch.h
UserCenter/UserCenterServer/Dto/: AddBalanceDto.cpp  AddBalanceDto.h  AddBindDeviceDto.cpp  AddBindDeviceDto.h  AllocationBalanceDto.cpp  AllocationBalanceDto.h  AssetsUpdateDto.cpp  AssetsUpdateDto.h  AuthDto.cpp  AuthDto.h  CheckBindDeviceDto.cpp  CheckBindDeviceDto.h  CoinAddDto.cpp  CoinAddDto.h  InfoDto.cpp  InfoDto.h  LoginDto.cpp  LoginDto.h  PayDto.cpp  PayDto.h  RealInfoDto.cpp  RealInfoDto.h  ReduceBalanceDto.cpp  ReduceBalanceDto.h  RegistDto.cpp  RegistDto.h  RemoveBindDeviceDto.cpp  RemoveBindDeviceDto.h  SetMasterDto.cpp  SetMasterDto.h  UpdateDto.cpp  UpdateDto.h
UserCenter/UserCenterServer/Manager/: DispatchManager.cpp  DispatchManager.h  HttpSession.cpp  HttpSession.h  UBaseSession.cpp  UBaseSession.h
UserCenter/UserCenterServer/Model/: AssetsUpdate.hpp  CancelTradeBatchModel.hpp  CancelTradeModel.hpp  CheckBindDeviceRespDto.hpp  LoginRespDto.hpp  MatchedDataModel.hpp  MsgRespDto.hpp  RegistRespDto.hpp  TradeBatchModel.hpp  TradeModel.hpp  UPJsonReflex.hpp
(+85 files in other folders)
